# internship-hunter

./: .gitignore  README.md  profile.example.yaml  profile.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/hunter/: __init__.py  cli.py  drafter.py  filter.py  schema.py  storage.py  tracker.py
src/hunter/sources/: __init__.py  base.py  emploitunisie.py  himalayas.py  hn_hiring.py  keejob.py  remoteok.py  remotive.py  summer_internships.py  tanitjobs.py  wwr.py
tests/: test_drafter.py  test_filter.py  test_schema.py  test_sources.py  test_storage.py  test_tracker.py
tests/fixtures/: emploitunisie.html  himalayas.json  hn_comments.json  hn_search.json  keejob.html  remoteok.json  remotive.json  summer2026.json  wwr.rss
