[project]
name = "internship-hunter"
version = "0.1.0"
description = "Semi-automated internship discovery, filtering, ranking, and application-drafting pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pypdf>=4.2",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
hunter = "hunter.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
